--- a/src/docs/guides/sheet/features/hyperlink.en-US.mdx
+++ b/src/docs/guides/sheet/features/hyperlink.en-US.mdx
@@ -8,6 +8,8 @@ import entryFile from './hyperlink/demo-1/index.txt'
 
 <BadgeGroup values={[UniverTypes.SHEET, UniverTypes.DOC]} value={UniverTypes.SHEET} />
 
+<Sandbox entryFile={entryFile} />
+
 Insert hyperlinks, support click to jump to specified link, cell, or worksheet.
 
 ## Installation
