feat: update doc

--- a/src/docs/guides/doc/features/core.zh-CN.mdx
+++ b/src/docs/guides/doc/features/core.zh-CN.mdx
@@ -139,7 +139,7 @@ univer.registerPlugin(UniverUIPlugin, {
 
 ## 注意事项
 
-- 页眉页脚仅**传统文档支持**，所以需要在 `documentFlavor` 设置为 `DocumentFlavor.TRADITIONAL`。如下
+- 页眉页脚仅**传统文档**支持，所以需要在 `documentFlavor` 设置为 `DocumentFlavor.TRADITIONAL`。如下
 
 ```typescript
 const univerDocData = {
