--- a/src/docs/guides/general/server/docker.zh-CN.mdx
+++ b/src/docs/guides/general/server/docker.zh-CN.mdx
@@ -172,6 +172,6 @@ HOST_GRAFANA_PORT=13000
 
 <Image src={mysqlImg} alt="mysql" width={500} />
 
-3.  `docker-compose.mysql.yaml` 文件提供了一个 MySQL 数据库组件，如果你想使用已有的数据库，可以将 `univer-mysql` 从 `docker-compose.mysql.yaml` 文件中删除，然后再把其他服务 `depend_on` 属性中的 `univer-mysql` 依赖去掉。
+3.  `docker-compose.mysql.yaml` 文件提供了一个 MySQL 数据库组件，如果你想使用已有的数据库，可以将 `univer-mysql` 从 `docker-compose.mysql.yaml` 文件中删除，然后再把其他服务 `depends_on` 属性中的 `univer-mysql` 依赖去掉。
 
 4. 启动/重启服务：`bash run.sh`。
